refactor: organize scripts with modular design